Update compose files

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
 JWT_SECRET="your_secret"
+RABBITMQ_DEFAULT_USER=user
+RABBITMQ_DEFAULT_PASS=password
+MAIL_USERNAME=anonymity.404x@gmail.com
+MAIL_PASSWORD="kfxs lkmx akql rtof"
