--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ RABBITMQ_DEFAULT_USER=user
 RABBITMQ_DEFAULT_PASS=password
 MAIL_USERNAME=anonymity.404x@gmail.com
 MAIL_PASSWORD="kfxs lkmx akql rtof"
+SONAR_TOKEN="your_token"
